# SoundMixer

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  Controller.cpp  Controller.hpp  SoundTrack.cpp  SoundTrack.hpp  SoundTrackListModel.cpp  SoundTrackListModel.hpp  main.cpp
app/qml/: SoundList.qml  SoundTrack.qml  main.qml
include/: Buffer.hpp  Mixer.hpp  SampleTrack.hpp
src/: Buffer.cpp  CMakeLists.txt  Mixer.cpp  SampleTrack.cpp  main.cpp
tests/: BufferTest.cpp  CMakeLists.txt  MixerTest.cpp  SampleTrackTest.cpp
